--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div id="app">
         <div id="nft-container">
-            <img id="nft-image" src="/images/26487.jpg.png" alt="NFT" />
+            <img id="nft-image" src="images/26487.jpg.png" alt="NFT" />
         </div>
         <div id="bid-container">
             <input type="number" id="bid-amount" placeholder="Enter bid amount in Ether" />
