--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 }
 
 #place-bid:hover {
-    background-color: #0056b3;
+    background-color: #b30300;
 }
 
     </style>
@@ -65,7 +65,8 @@
 <body>
     <div id="app">
         <div id="nft-container">
-            <img id="nft-image" src="images/26487.jpg.png" alt="NFT" />
+            // New NFT Image Here
+            <img id="nft-image" src="" alt="NFT" />
         </div>
         <div id="bid-container">
             <input type="number" id="bid-amount" placeholder="Enter bid amount in Ether" />
