--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 <body>
     <div id="app">
         <div id="nft-container">
-            // New NFT Image Here
-            <img id="nft-image" src="" alt="NFT" />
+            <img id="nft-image" src="images/26487FHF.png" alt="NFT" />
         </div>
         <div id="bid-container">
             <input type="number" id="bid-amount" placeholder="Enter bid amount in Ether" />
