--- a/index.html
+++ b/index.html
@@ -353,19 +353,21 @@
     }
 ]] // Replace with your contract ABI JSON
 
-        const web3 = new Web3(window.ethereum);
-        const contract = new web3.eth.Contract(ABI, CONTRACT_ADDRESS);
+    const CONTRACT_ADDRESS = '0x636a72efAffB03a572E7779f6923C7Ec1Ea95464';
+    const ABI = [] // Replace with your contract ABI JSON
 
-        async function placeBid(walletAddress, bidAmountInEther) {
-            const bidAmountInWei = web3.utils.toWei(bidAmountInEther, 'ether');
-            await contract.methods.placeBid().send({ from: walletAddress, value: bidAmountInWei });
-        }
+    const SEPOLIA_RPC_URL = 'https://sepolia.infura.io/v3/c970aa070ed149938f8c257ad46cb4f4'; // Replace with your Sepolia RPC URL
+    const web3 = new Web3(SEPOLIA_RPC_URL);
+    const contract = new web3.eth.Contract(ABI, CONTRACT_ADDRESS);
 
-        document.getElementById('place-bid').addEventListener('click', async () => {
-            const walletAddress = await connectWallet();
-            const bidAmount = document.getElementById('bid-amount').value;
-            await placeBid(walletAddress, bidAmount);
-        });
-    </script>
-</body>
-</html>
+    async function placeBid(walletAddress, bidAmountInEther) {
+        const bidAmountInWei = web3.utils.toWei(bidAmountInEther, 'ether');
+        await contract.methods.placeBid().send({ from: walletAddress, value: bidAmountInWei });
+    }
+
+    document.getElementById('place-bid').addEventListener('click', async () => {
+        const walletAddress = await connectWallet();
+        const bidAmount = document.getElementById('bid-amount').value;
+        await placeBid(walletAddress, bidAmount);
+    });
+</script>
