--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 	}
 ]] // Replace with your contract ABI JSON
 
-    const SEPOLIA_RPC_URL = 'https://sepolia.infura.io/v3/c970aa070ed149938f8c257ad46cb4f4'; // Replace with your Sepolia RPC UR
+    const SEPOLIA_RPC_URL = 'https://sepolia.infura.io/v3/c970aa070ed149938f8c257ad46cb4f4'; // Replace with your Sepolia RPC URL
     const web3 = new Web3(SEPOLIA_RPC_URL);
     const contract = new web3.eth.Contract(ABI, CONTRACT_ADDRESS);
 
@@ -427,4 +427,5 @@
         await placeBid(walletAddress, bidAmount);
     });
 </script>
+</body>
 </html>
