--- a/index.html
+++ b/index.html
@@ -6,60 +6,59 @@
     <title>NFT Auction</title>
     <style>
         body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-#app {
-    background-color: white;
-    padding: 2rem;
-    border-radius: 1rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
+        #app {
+            background-color: white;
+            padding: 2rem;
+            border-radius: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
 
-#nft-container {
-    text-align: center;
-    margin-bottom: 2rem;
-}
+        #nft-container {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
 
-#nft-image {
-    max-width: 100%;
-    height: auto;
-    border-radius: 0.5rem;
-}
+        #nft-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+        }
 
-#bid-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        #bid-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-#bid-amount {
-    flex-grow: 1;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    border: 1px solid #ccc;
-    margin-right: 1rem;
-}
+        #bid-amount {
+            flex-grow: 1;
+            padding: 0.5rem;
+            border-radius: 0.25rem;
+            border: 1px solid #ccc;
+            margin-right: 1rem;
+        }
 
-#place-bid {
-    background-color: #007bff;
-    color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    border: none;
-    cursor: pointer;
-}
+        #place-bid {
+            background-color: #007bff;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 0.25rem;
+            border: none;
+            cursor: pointer;
+        }
 
-#place-bid:hover {
-    background-color: #b30300;
-}
-
+        #place-bid:hover {
+            background-color: #b30300;
+        }
     </style>
 </head>
 <body>
@@ -75,17 +74,17 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.6.1/dist/web3.min.js"></script>
     <script>
-    if (typeof window.ethereum === 'undefined') {
-        alert('MetaMask is not installed!');
-    }
+        if (typeof window.ethereum === 'undefined') {
+            alert('MetaMask is not installed!');
+        }
 
-	async function connectWallet() {
-        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-        return accounts[0]; // The connected wallet address
-    }
+        async function connectWallet() {
+            const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+            return accounts[0]; // The connected wallet address
+        }
 
-    const CONTRACT_ADDRESS = '0xC70Ee1fED7a1B25f553D0b25D9a4AfafF45d3C8C';
-    const ABI = [[
+        const CONTRACT_ADDRESS = '0xC70Ee1fED7a1B25f553D0b25D9a4AfafF45d3C8C';
+        const ABI = [[
 	{
 		"inputs": [
 			{
@@ -412,20 +411,23 @@
 	}
 ]] // Replace with your contract ABI JSON
 
-    const SEPOLIA_RPC_URL = 'https://sepolia.infura.io/v3/c970aa070ed149938f8c257ad46cb4f4'; // Replace with your Sepolia RPC URL
-    const web3 = new Web3(SEPOLIA_RPC_URL);
-    const contract = new web3.eth.Contract(ABI, CONTRACT_ADDRESS);
+        const SEPOLIA_RPC_URL = 'https://sepolia.infura.io/v3/c970aa070ed149938f8c257ad46cb4f4'; // Replace with your Sepolia RPC URL
+        const web3 = new Web3(SEPOLIA_RPC_URL);
+        const contract = new web3.eth.Contract(ABI, CONTRACT_ADDRESS);
 
-    async function placeBid(walletAddress, bidAmountInEther) {
-        const bidAmountInWei = web3.utils.toWei(bidAmountInEther, 'ether');
-        await contract.methods.placeBid().send({ from: walletAddress, value: bidAmountInWei });
-    }
+async function placeBid(walletAddress, bidAmountInEther) {
+  const bidAmountInWei = web3.utils.toWei(bidAmountInEther, 'ether');
+  const accounts = await web3.eth.getAccounts();
+  const currentHighestBid = await contract.methods.currentHighestBid().call();
+  if (bidAmountInWei <= currentHighestBid) {
+    alert('Bid too low.');
+    return;
+  }
+  try {
+    await contract.methods.placeBid().send({ from: walletAddress, value: bidAmountInWei });
+    alert('Bid placed successfully!');
+  } catch (error) {
+    alert('Error placing bid: ' + error.message);
+  }
+}
 
-    document.getElementById('place-bid').addEventListener('click', async () => {
-        const walletAddress = await connectWallet();
-        const bidAmount = document.getElementById('bid-amount').value;
-        await placeBid(walletAddress, bidAmount);
-    });
-</script>
-</body>
-</html>
