--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
 
         const CONTRACT_ADDRESS = '0xeDB6A7EC893e1eB85E70E63defaE4F4b824cD929';
-        const ABI = [[
+        const ABI = [
 	{
 		"inputs": [
 			{
@@ -448,7 +448,7 @@
 		"stateMutability": "nonpayable",
 		"type": "function"
 	}
-]] // Replace with your contract ABI JSON
+] // Replace with your contract ABI JSON
 
         const SEPOLIA_RPC_URL = 'https://sepolia.infura.io/v3/c970aa070ed149938f8c257ad46cb4f4'; // Replace with your Sepolia RPC URL
         const web3 = new Web3(SEPOLIA_RPC_URL);
