--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</div>
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/web3@1.6.1/dist/web3.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 	<script>
 		if (typeof window.ethereum === 'undefined') {
 			alert('MetaMask is not installed!');
