--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			return accounts[0]; // The connected wallet address
 		}
 
-		const CONTRACT_ADDRESS = '0x9A62b70569606B692B8EF1659509a728a27b9067';
+		const CONTRACT_ADDRESS = '0xe502e17e50bfd1bceec01112836faa016f5d6391';
 		const ABI = [
 	{
 		"inputs": [
@@ -102,6 +102,11 @@
 			{
 				"internalType": "uint256",
 				"name": "_end",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_minimumBid",
 				"type": "uint256"
 			},
 			{
@@ -159,6 +164,37 @@
 			}
 		],
 		"name": "AuctionFinalized",
+		"type": "event"
+	},
+	{
+		"anonymous": false,
+		"inputs": [
+			{
+				"indexed": true,
+				"internalType": "uint256",
+				"name": "tokenId",
+				"type": "uint256"
+			},
+			{
+				"indexed": false,
+				"internalType": "uint256",
+				"name": "start",
+				"type": "uint256"
+			},
+			{
+				"indexed": false,
+				"internalType": "uint256",
+				"name": "end",
+				"type": "uint256"
+			},
+			{
+				"indexed": false,
+				"internalType": "uint256",
+				"name": "minimumBid",
+				"type": "uint256"
+			}
+		],
+		"name": "AuctionReset",
 		"type": "event"
 	},
 	{
@@ -344,6 +380,19 @@
 	},
 	{
 		"inputs": [],
+		"name": "minimumBid",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [],
 		"name": "nft",
 		"outputs": [
 			{
@@ -410,6 +459,34 @@
 		"type": "function"
 	},
 	{
+		"inputs": [
+			{
+				"internalType": "uint256",
+				"name": "_start",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_end",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_minimumBid",
+				"type": "uint256"
+			},
+			{
+				"internalType": "uint256",
+				"name": "_tokenId",
+				"type": "uint256"
+			}
+		],
+		"name": "resetAuction",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
 		"inputs": [],
 		"name": "royaltyPercentage",
 		"outputs": [
@@ -451,6 +528,13 @@
 	{
 		"inputs": [],
 		"name": "transferNFT",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"inputs": [],
+		"name": "withdrawExcessFunds",
 		"outputs": [],
 		"stateMutability": "nonpayable",
 		"type": "function"
