--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div id="nft-container">
             <input type="file" id="image-input" accept="image/*" style="display:none" />
             <label for="image-input">
-                <img id="nft-image" src="images/placeholder.jpg" alt="NFT" />
+                <img id="nft-image" src="https://raw.githubusercontent.com/Tylerlingg/Single-NFT-Auction/main/images/26487.jpg" alt="NFT" />
             </label>
         </div>
         <div id="bid-info">
