--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script>
-const CONTRACT_ABI = [
+const CONTRACT_ABI = 
 	{
 		"inputs": [
 			{
@@ -550,7 +550,7 @@ const CONTRACT_ABI = [
 		"type": "function"
 	}
 ];
-const CONTRACT_ADDRESS = '0x3866a0598E7220D442DAEe0FbccEc4E0f1466afA';
+const CONTRACT_ADDRESS = '0x3deB96a17704714FA8eE879060DDb3019B85d622';
 
 const web3 = new Web3(window.ethereum);
 const auctionContract = new web3.eth.Contract(CONTRACT_ABI, CONTRACT_ADDRESS);
