--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script>
-const CONTRACT_ABI = 
+const CONTRACT_ABI = [
 	{
 		"inputs": [
 			{
