--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Decentralized Exchange</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>PEPE Dex</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Decentralized Exchange</h1>
-    <p>Welcome to the Decentralized Exchange. Please connect your wallet to get started.</p>
-    <button id="connectButton" disabled>Connect Wallet</button>
-    <div id="exchangeForm" style="display: none;">
-      <h2>Swap Tokens</h2>
-      <label for="amountIn">Amount In:</label>
-      <input type="number" id="amountIn" min="0" step="0.01">
-      <label for="maxSlippagePercentage">Max Slippage Percentage:</label>
-      <input type="number" id="maxSlippagePercentage" min="0" step="0.01">
-      <button id="swapButton">Swap</button>
-      <div id="swapResult" style="display: none;"></div>
+    <div class="container">
+        <h1>PEPE Decentralized Exchange</h1>
+        <button id="connectButton" class="btn">Connect Wallet</button>
+        <div class="section">
+            <h2>Add Liquidity</h2>
+            <input id="addLiquidityAmount" type="number" placeholder="Amount of Tokens" />
+            <button id="addLiquidityButton" class="btn">Add Liquidity</button>
+            <p id="addLiquidityStatus"></p>
+        </div>
+        <div class="section">
+            <h2>Remove Liquidity</h2>
+            <input id="removeLiquidityAmount" type="number" placeholder="Amount of Liquidity" />
+            <button id="removeLiquidityButton" class="btn">Remove Liquidity</button>
+            <p id="removeLiquidityStatus"></p>
+        </div>
+        <div class="section">
+            <h2>Swap ETH for PEPE</h2>
+            <input id="swapAmount" type="number" placeholder="Amount of ETH" />
+            <button id="swapButton" class="btn">Swap</button>
+            <p id="swapStatus"></p>
+        </div>
     </div>
-  </div>
-  <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
