--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Frog-themed AMM</title>
+    <title>pepeDex</title>
     <style>
         body {
             background-image: url("path/to/your/frog-background.jpg");
