--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Froggy AMM</title>
+    <title>pepeDex</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
         <img src="frog.png" alt="Frog Logo">
-        <h1>Froggy Automated Market Maker</h1>
+        <h1>pepeDex</h1>
     </header>
     <section>
         <h2>Add Liquidity</h2>
