--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <img src="frog.png" alt="Frog Logo">
+        <img src="images/IMG_0151.png" alt="Frog Logo">
         <h1>pepeDex</h1>
     </header>
     <section>
