--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>pepeDex</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
